# veilsight

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
apps/core_service/: CMakeLists.txt  main.cpp
apps/core_service/include/: grpc_runner_server.hpp  runner_manager.hpp  telemetry_hub.hpp
apps/core_service/src/: grpc_runner_server.cpp  runner_manager.cpp  telemetry_hub.cpp
configs/: dual.yaml  dual_example.yaml  file.yaml  rtsp.yaml  test.yaml  webcam.yaml
controller/: requirements.txt
controller/tests/: test_analytics.py  test_controller.py
controller/veilsight_controller/: __init__.py  analytics_engine.py  analytics_models.py  analytics_service.py  analytics_store.py  api.py  main.py  models.py  runner_client.py  settings.py  telemetry_cache.py
core/: CMakeLists.txt
core/include/common/: config.hpp
core/include/encode/: mjpeg_server.hpp  mjpeg_stream_publisher.hpp
core/include/inference/: detector.hpp  recognizer.hpp  scrfd_detector.hpp  stream_inference_state.hpp  yolox_detector.hpp  yunet_detector.hpp
core/include/ingest/: gst_dual_source.hpp
core/include/pipeline/: bounded_queue.hpp  lifecycle.hpp  metrics.hpp  publishers.hpp  runtime.hpp  types.hpp
core/include/streaming/: composite_stream_publisher.hpp  mjpeg_publisher.hpp  runner_http_server.hpp  webrtc_publisher.hpp
core/include/tracking/: association.hpp  scene_grid.hpp  tracker.hpp
core/src/common/: config.cpp
core/src/encode/: mjpeg_server.cpp
core/src/inference/: detector_factory.cpp  recognizer.cpp  scrfd_detector.cpp  stream_inference_state.cpp  yolox_detector.cpp  yunet_detector.cpp
core/src/ingest/: gst_dual_source.cpp
core/src/pipeline/: metrics.cpp  runtime.cpp
core/src/streaming/: runner_http_server.cpp  webrtc_publisher.cpp
core/src/tracking/: association.cpp  bytetrack_tracker.cpp  demo_tracker.cpp  scene_grid.cpp
proto/veilsight/runner/v1/: runner.proto
scripts/: generate_proto_python.sh
scripts/smoke/: controller_health.sh  runner_health_uds.sh  webrtc_offer_smoke.py
tests/: CMakeLists.txt  config_tests.cpp  tracking_tests.cpp
ui/: app.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  styles.css
web/src/analytics/: coordinates.ts  types.ts
web/src/api/: client.ts  ws.ts
web/src/components/: AnalyticsOverlay.tsx  TrackOverlay.tsx  WebRTCPlayer.tsx
web/src/test/: setup.ts
web/tests/: app.test.tsx
